--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,3 +145,22 @@ background-color:#ebebeb;
  opacity: 1;
  text-decoration: underline;
 }
+
+.ai{
+ position: fixed;
+ bottom: 10px;
+ right: 20px;
+};
+.output{
+ display: flex;
+ flex-direction: column;
+
+}
+.input{
+ display: flex;
+ /* justify-content: space-evenly; */
+ /* flex-grow: 1; */
+ position: absolute;
+ bottom: 2px;
+ width: 100%;
+}
